--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,7 +54,8 @@
         </div>
     </div>
 
-    <!--<div id="search_suggestions"/>-->
+    <div id="search_suggestions" class="hidden"/>
+    <!--
     <div id="search_suggestions" class="hidden">
 
         <div class="suggestions_section">
@@ -108,6 +109,7 @@
         </div>
 
     </div>
+    -->
 
     <div id="search_results"/>
 
