for easier maintenance add CLOSURE_BASE_PATH config

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -115,6 +115,7 @@
 
     <script type="text/javascript">
         var CLOSURE_NO_DEPS = true;
+        // var CLOSURE_BASE_PATH = ".";
     </script>
 
     <!-- SWITCH -->
