first design draft of search results

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/search_layout.css">
     <link rel="stylesheet" href="css/search_field.css">
     <link rel="stylesheet" href="css/search_suggestions.css">
+    <link rel="stylesheet" href="css/search_results.css">
 
     <title>Search JBoss Community</title>
 
@@ -54,7 +55,7 @@
         </div>
     </div>
 
-    <div id="search_suggestions" class="hidden"/>
+    <div id="search_suggestions" class="hidden"></div>
     <!--
     <div id="search_suggestions" class="hidden">
 
@@ -111,7 +112,124 @@
     </div>
     -->
 
-    <div id="search_results"/>
+    <!--<div id="search_results"></div>-->
+    <div id="search_results">
+
+        <div class="hit_spacer"></div>
+        <div class="hit">
+            <div class="left">
+                <p class="avatar">
+                    <img src="image/test/sanne.png">
+                </p>
+            </div>
+            <div class="main">
+                <div class="title"><strong>Hibernate</strong> - JBoss Community</div>
+                <div class="link"><a href="http://www.hibernate.org/">www.hibernate.org</a></div>
+                <div class="snippet">
+                    <span class="date">10/Nov/2011 - </span>
+                    <strong>Hibernate</strong> is an object-relational mapping (ORM) library for the Java
+                    language, providing a framework for mapping an object-oriented domain model to a
+                    traditional relation database. <strong>Hibernate</strong> solves object-relational&nbsp;&hellip;
+                </div>
+            </div>
+        </div>
+
+        <div class="hit_spacer"></div>
+        <div class="hit">
+            <div class="left">
+                <p class="avatar">
+                    <img src="image/test/emmanuel.png">
+                </p>
+            </div>
+            <div class="main">
+                <div class="title">Chapter 9. Using <strong>Hibernate</strong> - JBoss</div>
+                <div class="link"><a href="http://docs.jboss.org/jbossas/getting_started/v4/html/hibernate.html">docs.jboss.org/jbossas/getting_started/v4/html/hibernate.html</a></div>
+                <div class="snippet">
+                    <span class="date">26/Mar/2009 - </span>
+                    <strong>Hibernate</strong> runs in almost any application server, or even outside of an application
+                    server completely. However, when running inside of JBoss, you can choose to deploy your application
+                    as a <strong>Hibernate</strong> archive&nbsp;&hellip;
+                </div>
+            </div>
+        </div>
+
+        <div class="hit_spacer"></div>
+        <div class="hit">
+            <div class="left">
+                <p class="avatar">
+                    <img src="image/test/dan.png">
+                </p>
+            </div>
+            <div class="main">
+                <div class="title">How to configure <strong>Hibernate</strong> in AS7 | JBoss AS | JBoss Community</div>
+                <div class="link"><a href="http://community.jboss.org/thread/171843">community.jboss.org/thread/171843</a></div>
+                <div class="snippet">
+                    <span class="date">25/Dec/2008 - </span>
+                    I got the following error when I deployed a WAR file based on <strong>hibernate</strong>. 23:49: 15,546 INFO
+                    [org.jboss.jpa] (MSC service thread 1-1) read persistence.xml for HousewareCategoryPU regarding detailed&nbsp;&hellip;
+                </div>
+            </div>
+        </div>
+
+        <div class="hit_spacer"></div>
+        <div class="hit">
+            <div class="left">
+                <p class="avatar">
+                    <img src="image/test/markl.png">
+                </p>
+            </div>
+            <div class="main">
+                <div class="title"><strong>Hibernate</strong> - JBoss Community</div>
+                <div class="link"><a href="http://www.hibernate.org/">www.hibernate.org</a></div>
+                <div class="snippet">
+                    <span class="date">10/Nov/2011 - </span>
+                    <strong>Hibernate</strong> is an object-relational mapping (ORM) library for the Java
+                    language, providing a framework for mapping an object-oriented domain model to a
+                    traditional relation database. <strong>Hibernate</strong> solves object-relational&nbsp;&hellip;
+                </div>
+            </div>
+        </div>
+
+        <div class="hit_spacer"></div>
+        <div class="hit">
+            <div class="left">
+                <p class="avatar">
+                    <img src="image/test/aslak.png">
+                </p>
+            </div>
+            <div class="main">
+                <div class="title">Chapter 9. Using <strong>Hibernate</strong> - JBoss</div>
+                <div class="link"><a href="http://docs.jboss.org/jbossas/getting_started/v4/html/hibernate.html">docs.jboss.org/jbossas/getting_started/v4/html/hibernate.html</a></div>
+                <div class="snippet">
+                    <span class="date">26/Mar/2009 - </span>
+                    <strong>Hibernate</strong> runs in almost any application server, or even outside of an application
+                    server completely. However, when running inside of JBoss, you can choose to deploy your application
+                    as a <strong>Hibernate</strong> archive&nbsp;&hellip;
+                </div>
+            </div>
+        </div>
+
+        <div class="hit_spacer"></div>
+        <div class="hit">
+            <div class="left">
+                <p class="avatar">
+                    <img src="image/test/generic.png">
+                </p>
+            </div>
+            <div class="main">
+                <div class="title">How to configure <strong>Hibernate</strong> in AS7 | JBoss AS | JBoss Community</div>
+                <div class="link"><a href="http://community.jboss.org/thread/171843">community.jboss.org/thread/171843</a></div>
+                <div class="snippet">
+                    <span class="date">25/Dec/2008 - </span>
+                    I got the following error when I deployed a WAR file based on <strong>hibernate</strong>. 23:49: 15,546 INFO
+                    [org.jboss.jpa] (MSC service thread 1-1) read persistence.xml for HousewareCategoryPU regarding detailed&nbsp;&hellip;
+                </div>
+            </div>
+        </div>
+
+        <div class="hit_spacer"></div>
+
+    </div>
 
     <script type="text/javascript">
         var CLOSURE_NO_DEPS = true;
