a bit more experiments with styling of search results

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -161,7 +161,7 @@
                 </p>
             </div>
             <div class="main">
-                <div class="title">How to configure <strong>Hibernate</strong> in AS7 | JBoss AS | JBoss Community</div>
+                <div class="title">How to configure <strong>Hibernate</strong> in AS7 | JBoss AS | JBoss Community and yet another long text here</div>
                 <div class="link"><a href="http://community.jboss.org/thread/171843">community.jboss.org/thread/171843</a></div>
                 <div class="snippet">
                     <span class="date">25/Dec/2008 - </span>
