- Logo based on Bree font (experimentally) - Add search statistics - Add search results pagination

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+    <!-- Consider using http://www.type-together.com/Bree for logo type -->
+    <!--<link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>-->
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/reset_override.css">
@@ -19,7 +20,8 @@
 
     <div id="search_top">
         <div>
-            <h1>JBoss Community Search</h1>
+            <!--<h1>JBoss Community Search</h1>-->
+            <img class="jcs_logo" src="image/jcs_logo_bree.png">
         </div>
         <div>
             <form method="get" id="searchform" action="#">
@@ -47,7 +49,7 @@
             <div class="content_clear"></div>
         </div>
         <div id="second_filters_row">
-            <div class="filter caption">Filter</div>
+            <div class="filter caption">Filters</div>
             <div class="filter option">Date</div>
             <div class="filter option">Project</div>
             <div class="filter option">Author</div>
@@ -115,7 +117,9 @@
     <!--<div id="search_results"></div>-->
     <div id="search_results">
 
-        <div class="hit_spacer"></div>
+        <div class="statistics">Found 2304 results for "Hibernate".</div>
+
+        <!--<div class="hit_spacer"></div>-->
         <div class="hit">
             <div class="left">
                 <p class="avatar">
@@ -228,6 +232,20 @@
         </div>
 
         <div class="hit_spacer"></div>
+
+        <div class="pagination">
+            &#9668;
+            <span>3</span>
+            <span>4</span>
+            <span>5</span>
+            <span>6</span>
+            <span>7</span>
+            <span>8</span>
+            <span>9</span>
+            <span>10</span>
+            <span>11</span>
+            &#9654;
+        </div>
 
     </div>
 
