make it easier to display hardcoded suggestions (for design experiments)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/search_layout.css">
     <link rel="stylesheet" href="css/search_field.css">
     <link rel="stylesheet" href="css/search_suggestions.css">
+    <!--<link rel="stylesheet" href="css/search_suggestions_override.css">-->
     <link rel="stylesheet" href="css/search_results.css">
 
     <title>Search JBoss Community</title>
@@ -59,7 +60,7 @@
 
     <div id="search_suggestions" class="hidden"></div>
     <!--
-    <div id="search_suggestions" class="hidden">
+    <div id="search_suggestions" class="not-hidden">
 
         <div class="suggestions_section">
             <div class="selectable">
