set HTML encoding to UTF-8

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 
+    <meta charset="UTF-8">
+
     <!-- Consider using http://www.type-together.com/Bree for logo type -->
     <!--<link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>-->
 
