--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,9 +37,6 @@
                     autofocus="true" >
             </form>
         </div>
-        <div id="active_search_filters">
-
-        </div>
     </div>
 
     <div id="search_filters">
@@ -59,6 +56,8 @@
             <div class="filter_clear"></div>
         </div>
     </div>
+
+    <div id="active_search_filters"></div>
 
     <div id="search_suggestions" class="hidden"></div>
     <!--
