finish filter tabs styling (for selected tabs)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,7 +64,7 @@
     ======================================================= -->
     <div id="date_filter" class="filter_tab date hidden">
         <div class="filter_tab_content">
-            <div style="height: 100px; width: 100%; background-color: rgb(150,150,150);"></div>
+            <div style="height: 100px; width: 100%; background-color: rgb(178, 179, 179);"></div>
         </div>
     </div>
 
