--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,6 +35,7 @@
                     id="query_field" type="text"
                     placeholder="Search"
                     autocomplete="off"
+                    spellcheck="false"
                     autofocus="true" >
             </form>
         </div>
@@ -76,6 +77,7 @@
                         id="project_filter_query_field" type="text"
                         placeholder="Filter project"
                         autocomplete="off"
+                        spellcheck="false"
                         autofocus="true" >
             </form>
 
@@ -99,6 +101,7 @@
                         id="author_filter_query_field" type="text"
                         placeholder="Filter author"
                         autocomplete="off"
+                        spellcheck="false"
                         autofocus="true" >
             </form>
 
