fix name of compiled js

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -318,7 +318,7 @@
     <!-- SWITCH -->
         <!-- in production -->
         <!--<script type="text/javascript" src="js/lib/jquery/jquery-1.7.1.min.js" charset="UTF-8"></script>-->
-        <!--<script type="text/javascript" src="javascript/compiled/search.jboss.org.gui-min.js" charset="UTF-8"></script>-->
+        <!--<script type="text/javascript" src="javascript/compiled/search.jboss.org.web-ui-min.js" charset="UTF-8"></script>-->
 
         <!-- in local development -->
         <script type="text/javascript" src="testing-only.js" charset="UTF-8"></script>
