Click logo to reset the UI

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,7 +25,7 @@
     <div id="search_top">
         <div>
             <!--<h1>JBoss Community Search</h1>-->
-            <img class="jcs_logo" src="image/jcs_logo_bree.png">
+            <a href="index.html"><img class="jcs_logo" src="image/jcs_logo_bree.png"></a>
         </div>
         <div>
             <form method="GET" id="searchform" action="#">
