fix: input element does not allow :before and :after pseudo  elements (because it is not a container).

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,12 +31,14 @@
             <form method="GET" id="searchform" action="#">
                 <!--<label for="query_field">Search : </label>-->
                 <!--The 'input' and 'change' events apply.-->
-                <input
-                    id="query_field" type="text"
-                    placeholder="Search"
-                    autocomplete="off"
-                    spellcheck="false"
-                    autofocus="true" >
+                <div id="span_query_field">
+                    <input
+                        id="query_field" type="text"
+                        placeholder="Search"
+                        autocomplete="off"
+                        spellcheck="false"
+                        autofocus="true" >
+                </div>
             </form>
         </div>
     </div>
