--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,13 +31,16 @@
             <form method="GET" id="searchform" action="#">
                 <!--<label for="query_field">Search : </label>-->
                 <!--The 'input' and 'change' events apply.-->
-                <div id="span_query_field">
+                <div id="query_field_div">
+                    <div id="query_field_div_magnifier"></div>
+                    <div id="query_field_div_spinner"></div>
                     <input
                         id="query_field" type="text"
                         placeholder="Search"
                         autocomplete="off"
                         spellcheck="false"
                         autofocus="true" >
+                    <div id="query_field_div_clear"></div>
                 </div>
             </form>
         </div>
