add div for clean (X) and optimize CSS a bit

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,7 +33,8 @@
                 <!--The 'input' and 'change' events apply.-->
                 <div id="query_field_div">
                     <div id="query_field_div_magnifier"></div>
-                    <div id="query_field_div_spinner"></div>
+                    <div id="query_field_div_spinner hidden"></div>
+                    <div id="query_field_div_x hidden"></div>
                     <input
                         id="query_field" type="text"
                         placeholder="Search"
