--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -186,7 +186,6 @@
 
         <div class="statistics">Found 2304 results for "Hibernate".</div>
 
-        <!--<div class="hit_spacer"></div>-->
         <div class="hit">
             <div class="left">
                 <p class="avatar">
@@ -301,17 +300,17 @@
         <div class="hit_spacer"></div>
 
         <div class="pagination">
-            &#9668;
-            <span>3</span>
-            <span>4</span>
-            <span>5</span>
-            <span>6</span>
-            <span>7</span>
-            <span>8</span>
-            <span>9</span>
-            <span>10</span>
-            <span>11</span>
-            &#9654;
+            <span>&#9668;</span>
+            <span> 3</span>
+            <span> 4</span>
+            <span> 5</span>
+            <span> 6</span>
+            <span> 7</span>
+            <span> 8</span>
+            <span> 9</span>
+            <span> 10</span>
+            <span> 11</span>
+            <span> &#9654;</span>
         </div>
 
     </div>
