add link to d3.js library

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -181,7 +181,8 @@
     </div>
     -->
 
-    <!--<div id="search_results"></div>-->
+    <div id="search_results"></div>
+    <!--
     <div id="search_results">
 
         <div class="statistics">Found 2304 results for "Hibernate".</div>
@@ -314,11 +315,14 @@
         </div>
 
     </div>
+    -->
 
     <script type="text/javascript">
         var CLOSURE_NO_DEPS = true;
         // var CLOSURE_BASE_PATH = ".";
     </script>
+
+    <script type="text/javascript" src="js/lib/d3.v3.0.4/d3.v3.min.js" charset="UTF-8"></script>
 
     <!-- SWITCH -->
         <!-- in production -->
