more elaborated implementation of user entertainment

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/reset_override.css">
     <link rel="stylesheet" href="css/search_base.css">
+    <link rel="stylesheet" href="css/search_entertain.css">
     <link rel="stylesheet" href="css/search_layout.css">
     <link rel="stylesheet" href="css/search_field.css">
     <link rel="stylesheet" href="css/search_suggestions.css">
