add Status window

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/reset_override.css">
     <link rel="stylesheet" href="css/search_base.css">
+    <link rel="stylesheet" href="css/search_status_window.css">
     <link rel="stylesheet" href="css/search_entertain.css">
     <link rel="stylesheet" href="css/search_layout.css">
     <link rel="stylesheet" href="css/search_field.css">
@@ -124,6 +125,8 @@
     <!-- Active filter badges
     ======================================================= -->
     <div id="active_search_filters"></div>
+
+    <div id="status_window" class="hidden" style="display:none"></div>
 
     <div id="search_suggestions" class="hidden"></div>
     <!--
