prepare for project filter initialization

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -80,23 +80,16 @@
     <div id="project_filter" class="filter_tab project hidden">
         <div class="filter_tab_content">
 
-            <form method="GET" id="project_filter_form" action="#">
+            <!--<form method="GET" id="project_filter_form" action="#">-->
                 <input
                         id="project_filter_query_field" type="text"
                         placeholder="Filter project"
                         autocomplete="off"
                         spellcheck="false"
                         autofocus="true" >
-            </form>
+            <!--</form>-->
 
-            <div id="project_filter_items">
-                <div>AeroGear</div>
-                <div>BeanValidation</div>
-                <div>CDI</div>
-                <div>DNA</div>
-                <div>EmbJOPR</div>
-                <div>Errai</div>
-            </div>
+            <div class="filter_items"></div>
 
         </div>
     </div>
@@ -104,16 +97,16 @@
     <div id="author_filter" class="filter_tab author hidden">
         <div class="filter_tab_content">
 
-            <form method="GET" id="author_filter_form" action="#">
+            <!--<form method="GET" id="author_filter_form" action="#">-->
                 <input
                         id="author_filter_query_field" type="text"
                         placeholder="Filter author"
                         autocomplete="off"
                         spellcheck="false"
                         autofocus="true" >
-            </form>
+            <!--</form>-->
 
-            <div id="author_filter_items">
+            <div class="filter_items">
                 <div>Sanne Grinovero</div>
                 <div>Emmanuel Bernard</div>
                 <div>Dan Allen</div>
