--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -89,7 +89,9 @@
                         autofocus="true" >
             <!--</form>-->
 
-            <div class="filter_items"></div>
+            <div class="filter_items">
+                <div>Initializing...</div>
+            </div>
 
         </div>
     </div>
@@ -107,9 +109,7 @@
             <!--</form>-->
 
             <div class="filter_items">
-                <div>Sanne Grinovero</div>
-                <div>Emmanuel Bernard</div>
-                <div>Dan Allen</div>
+                <div>Initializing...</div>
             </div>
 
         </div>
