[experimental] make the main search field disabled until initialization is finished. Closes #20

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -39,10 +39,11 @@
                     <div id="query_field_div_x" class="hidden"></div>
                     <input
                         id="query_field" type="text"
-                        placeholder="Search"
+                        placeholder="Initialization..."
                         autocomplete="off"
                         spellcheck="false"
-                        autofocus="true" >
+                        autofocus="true"
+                        disabled >
                     <div id="query_field_div_clear"></div>
                 </div>
             </form>
