Use project suggestions. Closes #19

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -121,7 +121,7 @@
     ======================================================= -->
     <div id="active_search_filters"></div>
 
-    <div id="status_window" class="hidden" style="display:none"></div>
+    <div id="status_window" class="hidden" style="display:none;"></div>
 
     <div id="search_suggestions" class="hidden"></div>
     <!--
@@ -318,9 +318,9 @@
 
     <div id="log"></div>
 
-    <script type="text/javascript" src="js/lib/d3.v3.0.4/d3.v3.min.js" charset="UTF-8"></script>
+    <script src="js/lib/d3.v3.0.4/d3.v3.min.js" charset="UTF-8"></script>
 
-    <script type="text/javascript">
+    <script>
         var CLOSURE_NO_DEPS = true;
         // var CLOSURE_BASE_PATH = ".";
     </script>
