Allow log console. Closes #21

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,6 +18,7 @@
     <!--<link rel="stylesheet" href="css/search_suggestions_override.css">-->
     <link rel="stylesheet" href="css/search_filter_tab.css">
     <link rel="stylesheet" href="css/search_results.css">
+    <link rel="stylesheet" href="css/search_log.css">
 
     <title>Search JBoss Community</title>
 
@@ -314,6 +315,8 @@
 
     </div>
     -->
+
+    <div id="log"></div>
 
     <script type="text/javascript" src="js/lib/d3.v3.0.4/d3.v3.min.js" charset="UTF-8"></script>
 
