Close Author filter on ESC key. Closes #11

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -111,7 +111,7 @@
             <!--</form>-->
 
             <div class="filter_items">
-                <div>Initializing...</div>
+                <div>Initializing... (TBD)</div>
             </div>
 
         </div>
