Integrate Histogram into Date Filter

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,6 +18,7 @@
     <!--<link rel="stylesheet" href="css/search_suggestions_override.css">-->
     <link rel="stylesheet" href="css/search_filter_tab.css">
     <link rel="stylesheet" href="css/search_results.css">
+    <link rel="stylesheet" href="css/search_visualization_histogram.css">
     <link rel="stylesheet" href="css/search_log.css">
 
     <title>Search JBoss Community</title>
@@ -75,7 +76,7 @@
     ======================================================= -->
     <div id="date_filter" class="filter_tab date hidden">
         <div class="filter_tab_content">
-            <div style="height: 100px; width: 100%; background-color: rgb(178, 179, 179);"></div>
+            <div id="date_histogram_chart"></div>
         </div>
     </div>
 
