--- a/src/test/html/org/jboss/search/visualization/Histogram_test.html
+++ b/src/test/html/org/jboss/search/visualization/Histogram_test.html
@@ -33,6 +33,9 @@
         #container {
             margin: 10pt;
         }
+        svg.histogram {
+            background-color: #d3d3d3;
+        }
     </style>
 </head>
 <body>
