Change 'Tickets' to 'Issues'

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -59,7 +59,7 @@
             <div class="content caption">Content</div>
             <div class="content option">All</div>
             <div class="content option">Mails</div>
-            <div class="content option">Tickets</div>
+            <div class="content option">Issues</div>
             <div class="content option">Blogs</div>
             <div class="content_clear"></div>
         </div>
