Add some HTML elements for date pickers and selection for results sort order. See #37

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
 
     <meta charset="UTF-8">
@@ -77,6 +77,16 @@
     <div id="date_filter" class="filter_tab date hidden">
         <div class="filter_tab_content">
             <div id="date_histogram_chart"></div>
+
+            From <input type="text" autocomplete="off" spellcheck="false">
+            To <input type="text" autocomplete="off" spellcheck="false">
+
+            <hr size=1>
+            Results sort by <select>
+                <option>relevancy</option>
+                <option>newest first</option>
+                <option>oldest first</option>
+            </select>
         </div>
     </div>
 
