--- a/src/main/webapp/design/search_results/index.html
+++ b/src/main/webapp/design/search_results/index.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="../../css/search_results.css">
     <!--<link rel="stylesheet" href="../../css/search_log.css">-->
 
+    <!-- JBoss Community Bootstrap styles (we need to get LESS working first) -->
+
+
+
     <title>Stub - search results</title>
 </head>
 <body>
