Histogram pointer interval selections. Closes #36 Rendering of search hits can fail when no hit highlights available. Closes #45

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -78,8 +78,8 @@
         <div class="filter_tab_content">
             <div id="date_histogram_chart"></div>
 
-            From <input type="text" autocomplete="off" spellcheck="false">
-            To <input type="text" autocomplete="off" spellcheck="false">
+            From <input id="date_filter_from_field" type="text" autocomplete="off" spellcheck="false">
+            To <input id="date_filter_to_field" type="text" autocomplete="off" spellcheck="false">
 
             <hr size=1>
             Results sort by <select>
