Update the index.html template (Tags, Pagination)

--- a/src/main/webapp/design/search_results/index.html
+++ b/src/main/webapp/design/search_results/index.html
@@ -56,7 +56,7 @@
             <div class="content caption">Content</div>
             <div class="content option">All</div>
             <div class="content option">Mails</div>
-            <div class="content option">Tickets</div>
+            <div class="content option">Issues</div>
             <div class="content option">Blogs</div>
             <div class="content_clear"></div>
         </div>
@@ -115,6 +115,9 @@
                     <div class="description"> of attempts to authorize using the database increased <span class="hlt">dramatically</span>.
                         - currently we have a DefaultCacheTimeout set to 9600 seconds, and after that time
                     </div>
+                    <div class="tags_list">
+                        Tags: <span> hibernate,</span><span> infinispan</span>
+                    </div>
                 </div>
                 <div class="contributors_list"><span class="ct_" hn_="1" cn_="0"><img
                         src="http://www.gravatar.com/avatar/eea032a47bd4b07dfed0e21be6fb14dd?s=16&amp;d=https%3A%2F%2Fcommunity.jboss.org%2Fgravatar%2Feea032a47bd4b07dfed0e21be6fb14dd%2F16.png"></span><span
@@ -162,6 +165,9 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="tags_list">
+                        Tags: <span> infinispan,</span><span> ivy,</span><span> as7,</span><span> quartz</span>
+                    </div>
                 </div>
                 <div class="contributors_list"><span class="ct_" hn_="2" cn_="0"><img
                         src="http://www.gravatar.com/avatar/ba4b20fbd74d023d513aa78b7d9578ac?s=16&amp;d=https%3A%2F%2Fcommunity.jboss.org%2Fgravatar%2Fba4b20fbd74d023d513aa78b7d9578ac%2F16.png"></span><span
@@ -174,7 +180,7 @@
 
         <div class="hit_spacer"></div>
 
-        <div class="pagination"><span> <a href="#q=dramatic&amp;page=1">1</a></span><span> <a href="#q=dramatic&amp;page=2">2</a></span><span> <a href="#q=dramatic&amp;page=3">3</a></span><span> <a href="#q=dramatic&amp;page=4">4</a></span><span> <a class="actual" href="#q=dramatic&amp;page=5">5</a></span><span> <a href="#q=dramatic&amp;page=6">6</a></span><span> <a href="#q=dramatic&amp;page=7">7</a></span><span> <a href="#q=dramatic&amp;page=8">8</a></span><span> <a href="#q=dramatic&amp;page=9">9</a></span><span> <a href="#q=dramatic&amp;page=10">10</a></span></div>
+        <div class="pagination"><span class="pc_" pn_="1">1</span><span class="actual pc_" pn_="2">2</span><span class="pc_" pn_="3">3</span><span class="pc_" pn_="4">4</span><span class="pc_" pn_="5">5</span><span class="pc_" pn_="6">6</span><span class="pc_" pn_="7">7</span><span class="pc_" pn_="8">8</span><span class="pc_" pn_="9">9</span><span class="pc_" pn_="10">10</span></div>
 
     </div>
 
