Move "Content" into "Filter". Closes #48

--- a/src/main/webapp/design/search_results/index.html
+++ b/src/main/webapp/design/search_results/index.html
@@ -52,21 +52,14 @@
     <!-- Filters
     ======================================================= -->
     <div id="search_filters">
-        <div id="first_filters_row">
-            <div class="content caption">Content</div>
-            <div class="content option">All</div>
-            <div class="content option">Mails</div>
-            <div class="content option">Issues</div>
-            <div class="content option">Blogs</div>
-            <div class="content_clear"></div>
-        </div>
-        <div id="second_filters_row">
-            <div class="filter caption">Filters</div>
-            <div class="filter option date">Date</div>
-            <div class="filter option project">Project</div>
-            <div class="filter option author">Author</div>
-            <div class="filter_clear"></div>
-        </div>
+		<div id="second_filters_row">
+			<div class="filter caption">Filters</div>
+			<div class="filter option date">Date</div>
+			<div class="filter option project">Project</div>
+			<div class="filter option author">Author</div>
+			<div class="filter option content">Content</div>
+			<div class="filter_clear"></div>
+		</div>
     </div>
 
     <!-- Search results
