--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -80,7 +80,7 @@
             To <input id="date_filter_to_field" type="text" autocomplete="off" spellcheck="false">
 
             <hr size=1>
-            Results sort by <select id="date_order">
+            Search results order by <select id="date_order">
                 <option value="score">relevancy</option>
                 <option value="new_first">newest first</option>
                 <option value="old_first">oldest first</option>
@@ -91,32 +91,49 @@
     <div id="project_filter" class="filter_tab project hidden">
         <div class="filter_tab_content">
 
-            <!--<form method="GET" id="project_filter_form" action="#">-->
-                <input
-                        id="project_filter_query_field" type="text"
-                        placeholder="Filter project"
-                        autocomplete="off"
-                        spellcheck="false"
-                        autofocus="true" >
-            <!--</form>-->
+			<div>
+				<div class="float_left">
+				<!--<form method="GET" id="project_filter_form" action="#">-->
+					<input
+							id="project_filter_query_field" type="text"
+							placeholder="Filter project"
+							autocomplete="off"
+							spellcheck="false"
+							autofocus="true" >
+				<!--</form>-->
+				</div>
+				<div class="float_right">
+				 	Order: Name | Frequency
+				</div>
+				<div class="clear_both"></div>
+			</div>
 
             <div class="filter_items">
                 <div>Initializing...</div>
             </div>
+
         </div>
     </div>
 
     <div id="author_filter" class="filter_tab author hidden">
         <div class="filter_tab_content">
 
-            <!--<form method="GET" id="author_filter_form" action="#">-->
-                <input
-                        id="author_filter_query_field" type="text"
-                        placeholder="Filter author"
-                        autocomplete="off"
-                        spellcheck="false"
-                        autofocus="true" >
-            <!--</form>-->
+			<div>
+				<div class="float_left">
+				<!--<form method="GET" id="author_filter_form" action="#">-->
+					<input
+							id="author_filter_query_field" type="text"
+							placeholder="Filter author"
+							autocomplete="off"
+							spellcheck="false"
+							autofocus="true" >
+				<!--</form>-->
+				</div>
+				<div class="float_right">
+					Order: Name | Frequency
+				</div>
+				<div class="clear_both"></div>
+			</div>
 
             <div class="filter_items">
                 <div>Initializing... (TBD)</div>
